--- a/OP.html
+++ b/OP.html
@@ -228,19 +228,17 @@ body{
       <div class="timeline">
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-            <h3 class=" text-light text-center">上線前置作業</h3>
+            <h3 class=" text-light text-center">上線前置作業<br>平台內容確認及系統單元測試</h3>
             <ul class="list-unstyled">
               <li><span class="badge badge-light">NO.1</span>開始招募【寶實潔】至30人 </li>
-              <li><span class="badge badge-light">NO.2</span>確認【平台】&【人力】法律規範</li>
-			  <li><span class="badge badge-light">NO.3</span>送審【第三方支付】綠界或智付通</li>
-              <li><span class="badge badge-light">NO.4</span>初期行銷主題規劃</li>
-              <li><span class="badge badge-light">NO.5</span>潔達人工作流程規範 </li>
-              <li><span class="badge badge-light">NO.6</span>客戶服務流程規範 </li>
-			  <li><span class="badge badge-light">NO.7</span>確認【延期&取消】規範</li>
-			  <li><span class="badge badge-light">NO.8</span>確認【客戶通知信件】內容</li>
-			  <li><span class="badge badge-light">NO.9</span>進行【消費者前台】單元測試</li>
-			  <li><span class="badge badge-light">NO.10</span>進行【阿姨APP】單元測試</li>
-			  <li><span class="badge badge-light">NO.11</span>進行【管理者後台】單元測試</li>
+			  <li><span class="badge badge-light">NO.2</span>送審【第三方支付】綠界或智付通</li>
+              <li><span class="badge badge-light">NO.3</span>初期行銷主題規劃</li>
+              <li><span class="badge badge-light">NO.4</span>客戶服務流程規範 </li>
+			  <li><span class="badge badge-light">NO.5</span>確認【延期&取消】規範</li>
+			  <li><span class="badge badge-light">NO.6</span>確認【客戶通知信件】內容</li>
+			  <li><span class="badge badge-light">NO.7</span>進行【消費者前台】單元測試</li>
+			  <li><span class="badge badge-light">NO.8</span>進行【阿姨APP】單元測試</li>
+			  <li><span class="badge badge-light">NO.9</span>進行【管理者後台】單元測試</li>
 			  
             </ul>
           </div>
@@ -253,7 +251,7 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-            <h3 class=" text-light text-center">上線前置作業</h3>
+            <h3 class=" text-light text-center">上線前置作業<br>合作規範簽約及系統整合測試</h3>
             <ul class="list-unstyled">
 			  <li><span class="badge badge-light">NO.1</span>持續招募【寶實潔】至30人</li>
 			  <li><span class="badge badge-light">NO.2</span>【寶實潔】的工作制服</li>
@@ -280,7 +278,7 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-            <h3 class=" text-light text-center">1/15產品上線<br>預期訂單100張</h3>
+            <h3 class=" text-light text-center">產品上線<br>預期訂單100張/月</h3>
             <ul class="list-unstyled mt-3 mb-4 text-left">
               <li><span class="badge badge-light">NO.1</span>【口袋名單】預期佔50%訂單</li>
 			  <li><span class="badge badge-light">NO.2</span>【鐘點清潔】預期佔49%訂單</li>
@@ -288,7 +286,7 @@ body{
 			  <li><span class="badge badge-light">NO.4</span>開始招募【e訂潔_個人】至20人</li>
 			  <li><span class="badge badge-light">NO.5</span>開始招募【e訂潔_企業】至5家</li>
 			  <li><span class="badge badge-light">NO.6</span>進行【首月營運】問題分析</li>
-			  <li><span class="badge badge-light">NO.7</span>分析人力&系統增量可否至3倍負荷</li>
+			  <li><span class="badge badge-light">NO.7</span>分析人力&系統增量可否至2倍負荷</li>
             </ul>
           </div>
           <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -300,19 +298,19 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-             <h3 class=" text-light text-center">產品營運<br>預期訂單300張</h3>
+             <h3 class=" text-light text-center">產品營運<br>預期訂單200張/月</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
 			  <li><span class="badge badge-light">NO.1</span>【口袋名單】預期佔20%訂單</li>
 			  <li><span class="badge badge-light">NO.2</span>【鐘點清潔】預期佔65%訂單</li>
               <li><span class="badge badge-light">NO.3</span>【定期清潔】預期佔5%訂單</li>
-			  <li><span class="badge badge-light">NO.8</span>【辦公室&營業場所】5%<span class="badge badge-primary">New服務</span></li>
-              <li><span class="badge badge-light">NO.9</span>【收納服務】5%<span class="badge badge-primary">New服務</span></li>
-			  <li><span class="badge badge-light">NO.10</span>【加購除塵蟎】5%<span class="badge badge-primary">New服務</span></li>
-			  <li><span class="badge badge-light">NO.1</span>持續招募【e訂潔_個人】至20人</li>
-			  <li><span class="badge badge-light">NO.2</span>持續招募【e訂潔_企業】至5家</li>
-			  <li><span class="badge badge-light">NO.3</span>開放供應商自行上架功能</li>
-			  <li><span class="badge badge-light">NO.4</span>開放手機自行排班功能</li>
-			  <li><span class="badge badge-light">NO.5</span>消費者前台網站全新改版</li>
+			  <li><span class="badge badge-light">NO.4</span>【辦公室&營業場所】5%<span class="badge badge-primary">New服務</span></li>
+              <li><span class="badge badge-light">NO.5</span>【收納服務】5%<span class="badge badge-primary">New服務</span></li>
+			  <li><span class="badge badge-light">NO.6</span>【加購除塵蟎】5%<span class="badge badge-primary">New服務</span></li>
+			  <li><span class="badge badge-light">NO.7</span>持續招募【e訂潔_個人】至20人</li>
+			  <li><span class="badge badge-light">NO.8</span>持續招募【e訂潔_企業】至5家</li>
+			  <li><span class="badge badge-light">NO.9</span>開放供應商自行上架功能</li>
+			  <li><span class="badge badge-light">NO.10</span>開放手機自行排班功能</li>
+			  <li><span class="badge badge-light">NO.11</span>消費者前台網站全新改版</li>
 			  </ul>
           </div>
           <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -324,7 +322,7 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-            <h3 class=" text-light text-center">產品營運<br>預期訂單600張</h3>
+            <h3 class=" text-light text-center">產品營運<br>預期訂單300張/月</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
 			  <li><span class="badge badge-light">NO.1</span>【口袋名單】預期佔15%訂單</li>
 			  <li><span class="badge badge-light">NO.2</span>【鐘點清潔】預期佔65%訂單</li>
@@ -348,8 +346,9 @@ body{
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 			<h3 class=" text-light text-center">產品營運<br>穩定流量保持成長</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
-              <li><span class="badge badge-light">NO.1</span>目前定價機制,每張單獲利約為20%</li>
+              <li><span class="badge badge-light">NO.1</span>鐘點清潔獲利約為20%</li>
               <li><span class="badge badge-light">NO.2</span>估算行銷成本應佔其中10%</li>
+			  <li><span class="badge badge-light">NO.3</span>其它服務獲利應定於30%</li>
             </ul>
           </div>
           <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -361,14 +360,13 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-            <h3 class=" text-light text-center">產品營運<br>與競業服務區隔化</h3>
+            <h3 class=" text-light text-center">產品營運<br>發展高獲利服務</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
-              <li><span class="badge badge-light">NO.1</span>販售【清潔用品】<span class="badge badge-primary">New服務</span></li>
-              <li><span class="badge badge-light">NO.2</span>【鞋類送洗】<span class="badge badge-primary">New服務</span></li>
-			  <li><span class="badge badge-light">NO.3</span>【寵物照護】<span class="badge badge-primary">New服務</span></li>
-			  <li><span class="badge badge-light">NO.4</span>【美甲美髮】<span class="badge badge-primary">New服務</span></li>
-			  <li><span class="badge badge-light">NO.5</span>【手機貼膜】<span class="badge badge-primary">New服務</span></li>
-			  <li><span class="badge badge-light">NO.6</span>【手機貼膜】<span class="badge badge-primary">New服務</span></li>
+              <li><span class="badge badge-light">NO.1</span>販售貼牌【清潔用品】<span class="badge badge-primary">New服務</span></li>
+              <li><span class="badge badge-light">NO.2</span>【名牌鞋包送洗】<span class="badge badge-primary">New服務</span></li>
+			  <li><span class="badge badge-light">NO.3</span>【寵物照護接送服務】<span class="badge badge-primary">New服務</span></li>
+			  <li><span class="badge badge-light">NO.4</span>【美甲到府服務】<span class="badge badge-primary">New服務</span></li>
+			  <li><span class="badge badge-light">NO.5</span>【手機貼膜收送服務】<span class="badge badge-primary">New服務</span></li>
 			</ul>  
           </div>
           <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
