--- a/OP.html
+++ b/OP.html
@@ -346,8 +346,7 @@ body{
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 			<h3 class=" text-light text-center">產品營運<br>穩定流量保持成長</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
-              <li><span class="badge badge-light">NO.1</span>鐘點清潔獲利約為20%</li>
-              <li><span class="badge badge-light">NO.2</span>估算行銷成本應佔其中10%</li>
+              <li><span class="badge badge-light">NO.1</span>鐘點清潔獲利約為20%(未扣除其它成本)</li>
 			  <li><span class="badge badge-light">NO.3</span>其它服務獲利應定於30%</li>
             </ul>
           </div>
