--- a/OP.html
+++ b/OP.html
@@ -346,8 +346,8 @@ body{
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 			<h3 class=" text-light text-center">產品營運<br>穩定流量保持成長</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
-              <li><span class="badge badge-light">NO.1</span>鐘點清潔獲利約為20%(未扣除其它成本)</li>
-			  <li><span class="badge badge-light">NO.3</span>其它服務獲利應定於30%</li>
+              <li><span class="badge badge-light">NO.1</span>鐘點清潔獲利約為15%~25%(只扣除人力成本)</li>
+			  <li><span class="badge badge-light">NO.2</span>其它服務獲利期望達30%</li>
             </ul>
           </div>
           <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
