--- a/OP.html
+++ b/OP.html
@@ -278,7 +278,7 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-            <h3 class=" text-light text-center">產品上線<br>預期訂單100張/月</h3>
+            <h3 class=" text-light text-center">1/15產品上線<br>預期訂單100張/月</h3>
             <ul class="list-unstyled mt-3 mb-4 text-left">
               <li><span class="badge badge-light">NO.1</span>【口袋名單】預期佔50%訂單</li>
 			  <li><span class="badge badge-light">NO.2</span>【鐘點清潔】預期佔49%訂單</li>
@@ -298,7 +298,7 @@ body{
         </div>
         <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
           <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-             <h3 class=" text-light text-center">產品營運<br>預期訂單200張/月</h3>
+             <h3 class=" text-light text-center">2/15優化版本上線<br>預期訂單200張/月</h3>
 			<ul class="list-unstyled mt-3 mb-4 text-left">
 			  <li><span class="badge badge-light">NO.1</span>【口袋名單】預期佔20%訂單</li>
 			  <li><span class="badge badge-light">NO.2</span>【鐘點清潔】預期佔65%訂單</li>
@@ -308,9 +308,10 @@ body{
 			  <li><span class="badge badge-light">NO.6</span>【加購除塵蟎】5%<span class="badge badge-primary">New服務</span></li>
 			  <li><span class="badge badge-light">NO.7</span>持續招募【e訂潔_個人】至20人</li>
 			  <li><span class="badge badge-light">NO.8</span>持續招募【e訂潔_企業】至5家</li>
-			  <li><span class="badge badge-light">NO.9</span>開放供應商自行上架功能</li>
-			  <li><span class="badge badge-light">NO.10</span>開放手機自行排班功能</li>
-			  <li><span class="badge badge-light">NO.11</span>消費者前台網站全新改版</li>
+			  <li><span class="badge badge-light">NO.9</span>2.0版本優化項目</li>	
+			  <li><span class="badge badge-light">NO.10</span>開放供應商自行上架功能</li>
+			  <li><span class="badge badge-light">NO.11</span>開放手機自行排班功能</li>
+			  <li><span class="badge badge-light">NO.12</span>消費者前台網站全新改版</li>
 			  </ul>
           </div>
           <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
